--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 :root {
     --rgba1: rgba(0, 62, 101, 0.89);
     --rgba2: rgba(0, 0, 0, 0.89);
+    --rgba3:rgba(0,0,0,0.2);
 }
 
 ::-webkit-scrollbar {
@@ -219,4 +220,26 @@ img {
 .services-list ul{
     list-style: disc;
     padding-left: 18px;
+}
+@keyframes moving {
+    50% {
+      width: 100%;
+    }
+  
+    100% {
+      width: 0;
+      right: 0;
+      left: unset;
+    }
+  }
+.loaderContact::before{
+    content: "";
+    position: absolute;
+    background: #0071e2;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    border-radius: 30px;
+    animation: moving 1s ease-in-out infinite;
 }
