--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     --rgba2: rgba(0, 0, 0, 0.89);
     --rgba3:rgba(0,0,0,0.2);
     --rgba4:rgba(0, 0, 0, 0.7);
+    --rgba5:rgba(0, 0, 0, 0.9);
 }
 
 ::-webkit-scrollbar {
@@ -278,4 +279,12 @@ img {
 }
 .navbarli:hover a::after{
     transform: scaleX(1);
+}
+.nonVisible{
+    visibility: hidden;
+    height: 0;
+    transition: all .4s ease;
+}
+.bg_rgba{
+    background: var(--rgba5);
 }
