--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,11 @@ img {
 .tansitionheader{
     transition: all 0.6s ease;
 }
+.hid{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
 @media screen and (max-width:1023px) {
     .sliderItem h1{
         font-size: 30px;
